2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add option to specify location of kerberos 5 libraries.
	Needed for 64bits support.

2003-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: (update_x_properties)
	Modified the logic to now use separate flags. This fixes #62852

2003-08-12  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.c (get_password): Incoporated
	e_passwords_ask_password() API change.

2004-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (remove_object): Remove
	recurrences only if rid is not NULL. This fixes the crash in #62631

2004-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (discard_alarm):
	Moved this from e-cal-backend-exchange.c, since this should be in the
	calendar derived class and not in the abstract class. This fixes #45103
	* calendar/e-cal-backend-exchange.c (discard_alarm): Now just returns
	an error
	(remove_calendar): Removed some warnings.
 
2004-08-12  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-context.c (write_prop): Checking for value of property
	being NULL. This fixes the crash #62259, But Internet Newsgroup 
	folder disappears from favorite folders list on restart, which 
	needs to be fixed.

2004-08-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed):
	Removing the source groups with old account name, when account
	name is changed.  Fixes #61332

2004-08-09  Ankit Patel <ankit@redhat.com>

	* configure.in: Added Gujarati & Panjabi

2004-08-07  Runa Bhattacharjee <runab@redhat.com>

	* configure.in: Added Bengali (bn) Locale

2004-08-07  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (get_folder_info): Handling 
	favorite folder and foreign folder hierarchies, to display
	users favorite public mail folders and subscribed mail folders.	
	(account_new_folder): ditto