@@ -1,3 +1,11 @@
+2004-08-13  Sushma Rai  <rsushma@novell.com>
+
+	* storage/exchange-autoconfig-wizard.c: (autoconfig_gui_apply)
+	Not allowing the user to create new account if already one
+	account exists. 
+	(is_active_exchange_account): Checks if account exists and active.
+	Fixes #61330
+
 2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* configure.in:
